--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="987794">  <td>24/02/13 08:25:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.SecondTestCase()[pri:0, instance:execuationpack.Test1@1de76cc7]">SecondTestCase</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="987794">  <td>24/02/13 08:25:00</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.fitstTestCase()[pri:0, instance:execuationpack.Test1@1de76cc7]">fitstTestCase</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="987794">  <td>24/02/13 08:25:00</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.fitstTestCase()[pri:0, instance:execuationpack.Test1@1de76cc7]">fitstTestCase</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="987794">  <td>24/02/13 08:25:00</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.fitstTestCase()[pri:0, instance:execuationpack.Test1@1de76cc7]">fitstTestCase</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="987794">  <td>24/02/13 08:25:00</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.fitstTestCase()[pri:0, instance:execuationpack.Test1@1de76cc7]">fitstTestCase</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="987794">  <td>24/02/13 08:25:00</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.fitstTestCase()[pri:0, instance:execuationpack.Test1@1de76cc7]">fitstTestCase</td> 
-  <td>main@657736958</td>   <td></td> </tr>
-<tr bgcolor="987794">  <td>24/02/13 08:25:00</td>   <td>48</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.thirdTestCase()[pri:0, instance:execuationpack.Test1@1de76cc7]">thirdTestCase</td> 
-  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="9191d5">  <td>24/02/17 06:57:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.SecondTestCase()[pri:0, instance:execuationpack.Test1@d9345cd]">SecondTestCase</td> 
+  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/02/17 06:57:12</td>   <td>1919</td> <td title="&lt;&lt;BrowserTest.after()[pri:0, instance:execuationpack.BrowserTest@229c6181]">&lt;&lt;after</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="d661ba">  <td>24/02/17 06:57:11</td>   <td>1856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependeciesManagement.engineering()[pri:0, instance:execuationpack.DependeciesManagement@791f145a]">engineering</td> 
+  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/02/17 06:57:08</td>   <td>-1311</td> <td title="&gt;&gt;BrowserTest.first()[pri:0, instance:execuationpack.BrowserTest@229c6181]">&gt;&gt;first</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="987794">  <td>24/02/17 06:57:10</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityEx.firstGear()[pri:1, instance:execuationpack.PriorityEx@6253c26]">firstGear</td> 
+  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="9191d5">  <td>24/02/17 06:57:10</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.fitstTestCase()[pri:0, instance:execuationpack.Test1@d9345cd]">fitstTestCase</td> 
+  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/02/17 06:57:10</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowserTest.flipkart()[pri:0, instance:execuationpack.BrowserTest@229c6181]">flipkart</td> 
+  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="d661ba">  <td>24/02/17 06:57:11</td>   <td>1844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependeciesManagement.highSchool()[pri:0, instance:execuationpack.DependeciesManagement@791f145a]">highSchool</td> 
+  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="d661ba">  <td>24/02/17 06:57:11</td>   <td>1852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependeciesManagement.higherSecondarySchool()[pri:0, instance:execuationpack.DependeciesManagement@791f145a]">higherSecondarySchool</td> 
+  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="987794">  <td>24/02/17 06:57:10</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityEx.secondGear()[pri:2, instance:execuationpack.PriorityEx@6253c26]">secondGear</td> 
+  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/02/17 06:57:10</td>   <td>773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrowserTest.snapDeal()[pri:0, instance:execuationpack.BrowserTest@229c6181]">snapDeal</td> 
+  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="987794">  <td>24/02/17 06:57:10</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityEx.startTheCar()[pri:0, instance:execuationpack.PriorityEx@6253c26]">startTheCar</td> 
+  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="987794">  <td>24/02/17 06:57:10</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityEx.thirdGear()[pri:3, instance:execuationpack.PriorityEx@6253c26]">thirdGear</td> 
+  <td>main@4766562</td>   <td></td> </tr>
+<tr bgcolor="9191d5">  <td>24/02/17 06:57:10</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.thirdTestCase()[pri:0, instance:execuationpack.Test1@d9345cd]">thirdTestCase</td> 
+  <td>main@4766562</td>   <td></td> </tr>
 </table>
